--- a/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
+++ b/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
@@ -64,12 +64,24 @@
               </mat-datepicker-toggle>
               <mat-datepicker #sampai></mat-datepicker>
             </mat-form-field>
+            
           </div>
-          <!-- <div class="px-24" fxLayout="row" fxLayoutAlign="start center">
-            <h3 class="">
-              <strong>Audience</strong>
-            </h3>
-          </div> -->
+          <div class="px-24" fxLayout="row" fxLayoutAlign="start center" >
+            <mat-form-field fxFlex="100" class="is-light form-primary" *ngIf="formBannerGroup.get('type_banner').value === 'ticker'">
+              <input   maxlength="10" matInput type="text" formControlName="ticker_title"
+                placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}}"> 
+              <mat-error
+                *ngIf="formBannerGroup.controls['ticker_title'].hasError('required') && formBannerGroup.controls['ticker_title'].touched">
+                {{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}} {{'global.messages.mandatory_text' |
+                translate}}
+              </mat-error>
+              <mat-error
+                *ngIf="formBannerGroup.controls['ticker_title'].hasError('maxlength') && formBannerGroup.controls['ticker_title'].touched">
+                {{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}} Maksimal 10 karakter
+              </mat-error>
+            </mat-form-field>
+           
+          </div>
           <div class="py-16 px-24" fxLayout="row" fxLayoutAlign="start center" *ngIf="formBannerGroup.get('type_banner').value != 'ticker'">
             <span class="text-bold">{{'iklan_dalam_aplikasi.spanduk_online.text9' | translate}}</span>
           </div>
@@ -135,6 +147,22 @@
               </div>
             </div>
           </div>
+          <div class="px-24" fxLayout="column" style="padding-bottom: 20px;">
+          <div class="" fxLayout="row" fxLayoutAlign="start center">
+            <h3 class="">{{'iklan_dalam_aplikasi.spanduk_online.textticker' | translate}}</h3>
+          </div>
+          <textarea *ngIf="formBannerGroup.get('type_banner').value === 'ticker'" maxlength="20" [froalaEditor]="options" formControlName="ticker_body" class="pb-4" fxFlex="100"></textarea>
+          
+          <mat-error style="padding-top: 6px !important; font-size: .86em;"
+            *ngIf="formBannerGroup.controls['ticker_body'].hasError('required') && formBannerGroup.controls['ticker_body'].touched">
+            {{'iklan_dalam_aplikasi.spanduk_online.textticker' | translate}} {{'global.messages.mandatory_text' |
+            translate}}
+          </mat-error>
+          <mat-error
+                *ngIf="formBannerGroup.controls['ticker_body'].hasError('maxlength') && formBannerGroup.controls['ticker_body'].touched">
+                {{'iklan_dalam_aplikasi.spanduk_online.textticker' | translate}} Maksimal 20 karakter
+              </mat-error>
+            </div>
           <div fxLayout="row wrap">
             <div fxFlex>
               <div class="pb-16 px-24">
@@ -377,18 +405,12 @@
             *ngIf="(formBannerGroup.get('content_type').value === 'static_page' || formBannerGroup.get('content_type').value === 'e_wallet')">
             <div fxLayout="row" *ngIf="formBannerGroup.get('content_type').value === 'static_page'">
               <mat-form-field fxFlex="100" class="is-light form-primary">
-                <input  *ngIf="formBannerGroup.get('type_banner').value === 'ticker'" maxlength="10" matInput type="text" formControlName="title"
-                  placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}}">
-                <input  *ngIf="formBannerGroup.get('type_banner').value != 'ticker'" matInput type="text" formControlName="title"
+                <input matInput type="text" formControlName="title"
                   placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}}">  
                 <mat-error
                   *ngIf="formBannerGroup.controls['title'].hasError('required') && formBannerGroup.controls['title'].touched">
                   {{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}} {{'global.messages.mandatory_text' |
                   translate}}
-                </mat-error>
-                <mat-error
-                  *ngIf="formBannerGroup.controls['title'].hasError('maxlength') && formBannerGroup.controls['title'].touched">
-                  {{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}} Maksimal 10 karakter
                 </mat-error>
               </mat-form-field>
             </div>
@@ -429,17 +451,13 @@
             <div class="" fxLayout="row" fxLayoutAlign="start center">
               <h3 class="">{{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}}</h3>
             </div>
-            <textarea *ngIf="formBannerGroup.get('type_banner').value === 'ticker'" maxlength="20" [froalaEditor]="options" formControlName="body" class="pb-4" fxFlex="100"></textarea>
-            <textarea *ngIf="formBannerGroup.get('type_banner').value != 'ticker'" [froalaEditor]="options" formControlName="body" class="pb-4" fxFlex="100"></textarea>
+           
+            <textarea [froalaEditor]="options" formControlName="body" class="pb-4" fxFlex="100"></textarea>
             <mat-error style="padding-top: 6px !important; font-size: .86em;"
               *ngIf="formBannerGroup.controls['body'].hasError('required') && formBannerGroup.controls['body'].touched">
               {{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}} {{'global.messages.mandatory_text' |
               translate}}
             </mat-error>
-            <mat-error
-                  *ngIf="formBannerGroup.controls['body'].hasError('maxlength') && formBannerGroup.controls['body'].touched">
-                  {{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}} Maksimal 20 karakter
-                </mat-error>
           </div>
 
           <!-- Landing Page -->
