--- a/src/app/pages/user-management/retailer/import-access-cashier-dialog/import-access-cashier-dialog.component.html
+++ b/src/app/pages/user-management/retailer/import-access-cashier-dialog/import-access-cashier-dialog.component.html
@@ -39,7 +39,7 @@
           <tr>
             <th nowrap>{{'wholesaler.agent_code' | translate}}</th>
             <th nowrap>{{'global.label.cashier_access' | translate}}</th>
-            <th nowrap>{{'global.label.chat_bot'}}</th>
+            <th nowrap>{{'global.label.chat_bot' | translate}}</th>
             <th nowrap>{{'retailer.list.gsm_pl' | translate}}</th>
           </tr>
         </thead>
