--- a/src/app/pages/dte/template/edit/template-edit.component.html
+++ b/src/app/pages/dte/template/edit/template-edit.component.html
@@ -563,7 +563,7 @@
                   <ng-container *ngIf="item.get('typeSelection').value['value'] == 'upc'">
                     <div fxLayout="column" fxFlex="100">
                       <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
-                        <div fxFlex="30">UPC code yang harus diinput:</div>
+                        <div fxFlex="30">{{'upc_code.upc_code_needed' | translate}}:</div>
                         <div fxLayout="row" fxFlex="20">
                           <mat-form-field fxFlex="100" class="question is-light">
                             <input class="inputUPC" matInput 
@@ -571,13 +571,13 @@
                             type="number" min="1" 
                             onkeypress='return event.charCode >= 48 && event.charCode <= 57 ? (event.target.value.length === 0 && event.which ===48) ? false : true: false'>
                             <mat-error>
-                              Jumlah UPC code harus diisi
+                              {{'upc_code.upc_code_needed_required' | translate}}
                             </mat-error>
                           </mat-form-field>
                         </div>
                       </div>
                       <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
-                        <div fxFlex="30">Konversi coin per 1 kode UPC:</div>
+                        <div fxFlex="30">{{'upc_code.upc_coin_conversion' | translate}}:</div>
                         <div fxLayout="row" fxFlex="20">
                           <mat-form-field fxFlex="100" class="question is-light">
                             <input class="inputUPC" 
@@ -586,16 +586,16 @@
                             min="1" 
                             onkeypress='return event.charCode >= 48 && event.charCode <= 57 ? (event.target.value.length === 0 && event.which ===48) ? false : true: false'>
                             <mat-error>
-                              Konversi coin harus diisi
+                              {{'upc_code.upc_coin_conversion_required' | translate}}
                             </mat-error>
                           </mat-form-field>
                         </div>
                       </div>
                       <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
                         <div fxLayout="row" fxFlex="50">
-                          <search-product-barcode style="width: 100%;" [inputPlaceHolder]="'Search Brand Family'" [disabled]="isDetail" [errorMessage]="'Tidak Ditemukan Brand'" [isBrandFamily]="true" formControlName="upcBrandFamily">
+                          <search-product-barcode style="width: 100%;" [inputPlaceHolder]="'{{'upc_code.brand_family_error' | translate}}'" [disabled]="isDetail" [errorMessage]="'{{'upc_code.brand_family' | translate}}'" [isBrandFamily]="true" formControlName="upcBrandFamily">
                             <mat-error *ngIf="templateTaskForm.get('questions').at(i).get('upcBrandFamily').hasError('required') && templateTaskForm.get('questions').at(i).get('upcBrandFamily').touched && templateTaskForm.touched">
-                              Brand Family Harus diisi
+                              {{'upc_code.brand_family_required' | translate}}
                             </mat-error>
                           </search-product-barcode>
                         </div>
