--- a/src/app/pages/dte/template/create/personalize/template-create-personalize.component.html
+++ b/src/app/pages/dte/template/create/personalize/template-create-personalize.component.html
@@ -497,7 +497,7 @@
                       >
                         Image Quality Detection
                       </mat-checkbox>
-                      <mat-checkbox *ngIf="item.get('type').value === 'upc'" formControlName="qrCode">QRCode</mat-checkbox>
+                      <mat-checkbox *ngIf="item.get('type').value === 'upc'" formControlName="qrCode">{{'upc_code.qrcode' | translate}}</mat-checkbox>
                       <mat-checkbox [id]="'encryption-'+(i)" formControlName="encryption">{{'dte.template_tugas.encryption' | translate}}</mat-checkbox>
                     </div>
 
@@ -710,7 +710,7 @@
                           </div>
                           <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
                             <div fxLayout="row" fxFlex="50">
-                              <search-product-barcode style="width: 100%;" [errorMessage]="'{{'upc_code.brand_family_error' | translate}}'" [inputPlaceHolder]="'{{'upc_code.brand_family' | translate}}'" [isBrandFamily]="true" formControlName="upcBrandFamily">
+                              <search-product-barcode style="width: 100%;" [errorMessage]="'upc_code.brand_family_empty' | translate" [inputPlaceHolder]="'upc_code.brand_family_placeholder' | translate" [isBrandFamily]="true" formControlName="upcBrandFamily">
                                 <mat-error *ngIf="templateTaskForm.get('questions').at(i).get('upcBrandFamily').hasError('required') && templateTaskForm.touched">
                                   <!-- {{'upc_code.brand_family_required' | translate}} -->
                                   {{'upc_code.brand_family_required' | translate}}
