--- a/src/app/pages/dte/template/edit/personalize/template-edit-personalize.component.html
+++ b/src/app/pages/dte/template/edit/personalize/template-edit-personalize.component.html
@@ -489,7 +489,7 @@
                       >
                         Image Quality Detection
                       </mat-checkbox>
-                      <mat-checkbox *ngIf="item.get('type').value === 'upc'" formControlName="qrCode">QRCode</mat-checkbox>
+                      <mat-checkbox *ngIf="item.get('type').value === 'upc'" formControlName="qrCode">{{'upc_code.qrcode' | translate}}</mat-checkbox>
                       <mat-checkbox [id]="'encryption-'+(i)" formControlName="encryption">{{'dte.template_tugas.encryption' | translate}}</mat-checkbox>
                     </div>
     
@@ -705,7 +705,7 @@
                           </div>
                           <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
                             <div fxLayout="row" fxFlex="50">
-                              <search-product-barcode style="width: 100%;" [errorMessage]="'{{'upc_code.brand_family_error' | translate}}'" [inputPlaceHolder]="'{{'upc_code.brand_family' | translate}}'" [disabled]="isDetail" [isBrandFamily]="true" formControlName="upcBrandFamily">
+                              <search-product-barcode style="width: 100%;" [errorMessage]="'upc_code.brand_family_empty' | translate" [inputPlaceHolder]="'upc_code.brand_family_placeholder' | translate" [disabled]="isDetail" [isBrandFamily]="true" formControlName="upcBrandFamily">
                                 <mat-error *ngIf="templateTaskForm.get('questions').at(i).get('upcBrandFamily').hasError('required') && templateTaskForm.touched">
                                   {{'upc_code.brand_family_required' | translate}}
                                 </mat-error>
