--- a/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.html
+++ b/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.html
@@ -62,7 +62,7 @@
           </div>
           <div class="px-24" fxLayout="row" fxLayoutAlign="start center" >
             <mat-form-field fxFlex="100" class="is-light form-primary" *ngIf="formBannerGroup.get('type_banner').value === 'ticker'">
-              <input   maxlength="10" matInput type="text" formControlName="ticker_title"
+              <input   maxlength="20" matInput type="text" formControlName="ticker_title"
                 placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}}"> 
               <mat-error
                 *ngIf="formBannerGroup.controls['ticker_title'].hasError('required') && formBannerGroup.controls['ticker_title'].touched">
@@ -71,7 +71,7 @@
               </mat-error>
               <mat-error
                 *ngIf="formBannerGroup.controls['ticker_title'].hasError('maxlength') && formBannerGroup.controls['ticker_title'].touched">
-                {{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}} Maksimal 10 karakter
+                {{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}} Maksimal 20 karakter
               </mat-error>
             </mat-form-field>
            
@@ -121,7 +121,7 @@
                   </mat-form-field>
                 </div>
               </div>
-              <div class="py-16" fxLayout="row" fxLayoutAlign="start center">
+              <div class="py-16" fxLayout="row" fxLayoutAlign="start center"  *ngIf="formBannerGroup.get('type_banner').value != 'ticker'">
                 <span class="text-bold">{{'iklan_dalam_aplikasi.spanduk_online.text10' | translate}}</span>
               </div>
               <div fxLayout="row wrap" fxLayout.lt-md="column" class="pb-24" fxLayoutGap="20px" fxLayoutGap.lt-md="0px"
@@ -142,7 +142,7 @@
             <div class="" fxLayout="row" fxLayoutAlign="start center" *ngIf="formBannerGroup.get('type_banner').value === 'ticker'">
               <h3 class="">{{'iklan_dalam_aplikasi.spanduk_online.textticker' | translate}}</h3>
             </div>
-            <textarea *ngIf="formBannerGroup.get('type_banner').value === 'ticker'" maxlength="20" [froalaEditor]="options" formControlName="ticker_body" class="pb-4" fxFlex="100"></textarea>
+            <textarea *ngIf="formBannerGroup.get('type_banner').value === 'ticker'" maxlength="50" [froalaEditor]="options" formControlName="ticker_body" class="pb-4" fxFlex="100"></textarea>
             
             <mat-error style="padding-top: 6px !important; font-size: .86em;"
               *ngIf="formBannerGroup.controls['ticker_body'].hasError('required') && formBannerGroup.controls['ticker_body'].touched && formBannerGroup.get('type_banner').value === 'ticker'">
@@ -151,10 +151,10 @@
             </mat-error>
             <mat-error
                   *ngIf="formBannerGroup.controls['ticker_body'].hasError('maxlength') && formBannerGroup.controls['ticker_body'].touched && formBannerGroup.get('type_banner').value === 'ticker'">
-                  {{'iklan_dalam_aplikasi.spanduk_online.textticker' | translate}} Maksimal 20 karakter
+                  {{'iklan_dalam_aplikasi.spanduk_online.textticker' | translate}} Maksimal 50 karakter
                 </mat-error>
               </div>
-          <div *ngIf="!bannerSelected && detailBanner.image_url" class="pt-16 px-24">
+          <div *ngIf="!bannerSelected && detailBanner.image_url && formBannerGroup.get('type_banner').value != 'ticker'" class="pt-16 px-24">
             <div class="py-16" fxLayout="row" fxLayoutAlign="start center">
               <span class="text-bold">{{'iklan_dalam_aplikasi.spanduk_online.text10' | translate}}</span>
             </div>
@@ -164,7 +164,7 @@
               </div>
             </div>
           </div>
-          <div *ngIf="isDetail" class="pt-16 px-24">
+          <div *ngIf="isDetail && formBannerGroup.get('type_banner').value != 'ticker'" class="pt-16 px-24">
             <div class="py-16" fxLayout="row" fxLayoutAlign="start center">
               <span class="text-bold">{{'iklan_dalam_aplikasi.spanduk_online.text10' | translate}}</span>
             </div>
