--- a/src/app/pages/inapp-marketing/banner/index/banner-index.component.html
+++ b/src/app/pages/inapp-marketing/banner/index/banner-index.component.html
@@ -144,7 +144,7 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="140" name="" [canAutoResize]="false" [sortable]="true">
+        <!-- <ngx-datatable-column [width]="140" name="" [canAutoResize]="false" [sortable]="true">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container pl-8 pt-8 pb-8 pr-0">
               <img class="banner-image" *ngIf="row.image_url" [src]="row.image_url">
@@ -152,7 +152,7 @@
                 [src]="'https://i2.wp.com/www.solidcolore.com/3840/d3d3d3_background.jpg?ssl=1'">
             </div>
           </ng-template>
-        </ngx-datatable-column>
+        </ngx-datatable-column> -->
 
         <ngx-datatable-column name="{{ ls.locale.global.label.name }}" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
