--- a/src/app/pages/popup-notification/create/popup-notification-create.component.html
+++ b/src/app/pages/popup-notification/create/popup-notification-create.component.html
@@ -220,15 +220,10 @@
               <div fxFlex="45">
                 <div *ngIf="files">
                   <div class="mat-chip mat-primary mat-standard-chip mat-chip-with-trailing-icon ng-star-inserted"
-                    role="option" tabindex="-1" aria-disabled="false" aria-selected="false"><span <<<<<<< HEAD
+                    role="option" tabindex="-1" aria-disabled="false" aria-selected="false"><span
                       class="preview-image-content"
                       (click)="previewImage(imageConverted)">{{'notification.popup_notifikasi.text17' |
                       translate}}</span>
-                    =======
-                    class="preview-image-content"
-                    (click)="previewImage(imageConverted)">{{'iklan_dalam_aplikasi.spanduk_online.view_image' |
-                    translate}} popup notifikasi</span>
-                    >>>>>>> 671915f805f06bcb79e536693ee4c767c8306d94
                     <mat-icon (click)="removeImage()" matTooltip="{{'global.label.delete_image' | translate}}"
                       class="mat-chip-remove mat-chip-trailing-icon mat-icon material-icons mat-icon-no-color ng-star-inserted"
                       matchipremove="" role="img" aria-hidden="true">cancel</mat-icon>
