--- a/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
+++ b/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
@@ -544,7 +544,7 @@
                   <strong class="font-size-16">{{'iklan_dalam_aplikasi.spanduk_online.tickercat' | translate}}</strong>
                 </div>
                 <mat-radio-group formControlName="kategori" class="radio-group">
-                  <mat-radio-button class="radio-button" *ngFor="let item of listKategori; let i = index"  [value]="item.value" [checked]="i === 0">
+                  <mat-radio-button class="radio-button" *ngFor="let item of listKategori; let i = index"  [value]="i.value" [checked]="i === 0">
                     {{item.name}}
                   </mat-radio-button>
                 </mat-radio-group>
