fix filter data by admin

--- a/src/app/pages/dte/coin-adjustment-approval/index-tsm/coin-adjustment-approval-tsm.component.html
+++ b/src/app/pages/dte/coin-adjustment-approval/index-tsm/coin-adjustment-approval-tsm.component.html
@@ -94,7 +94,8 @@
 
     <ng-template ngx-datatable-cell-template let-row="row" let-value="value" let-isSelected="isSelected"
       let-onCheckboxChangeFn="onCheckboxChangeFn">
-      <mat-checkbox [checked]="selected.includes(row)" (change)="onCheckboxChangeFn($event)" [disabled]="row.status !== 'pending'">
+      <mat-checkbox [checked]="selected.includes(row)" (change)="onCheckboxChangeFn($event)"
+        [disabled]="row.status !== 'pending'">
       </mat-checkbox>
     </ng-template>
   </ngx-datatable-column>
