enable target area in banner and notification

--- a/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
+++ b/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
@@ -500,7 +500,7 @@
           <div fxLayout="row" fxLayoutGap="24px" class="pb-24 px-24">
             <mat-checkbox class="mt-4 ml-4 mb-8" (change)="isTargetAudience($event)"
               formControlName="is_target_audience">{{'iklan_dalam_aplikasi.spanduk_online.text26' | translate}}</mat-checkbox>
-            <mat-checkbox *ngIf="formBannerGroup.get('user_group').value === 'customer'" class="mt-4 ml-4 mb-8"
+            <mat-checkbox class="mt-4 ml-4 mb-8"
               (change)="isTargetArea($event)" formControlName="is_target_area">{{'iklan_dalam_aplikasi.spanduk_online.target_area' | translate}}</mat-checkbox>
           </div>
           <ng-container *ngIf="formBannerGroup.get('is_target_area').value === true">
