--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -557,7 +557,7 @@
             <mat-checkbox class="mt-4 ml-4 mb-8" (change)="isTargetAudience($event)"
               formControlName="is_target_audience">
               {{'iklan_dalam_aplikasi.spanduk_online.text26' | translate}}</mat-checkbox>
-            <mat-checkbox *ngIf="formNotification.controls['user_group'].value === 'customer'" class="mt-4 ml-20 mb-8"
+            <mat-checkbox *ngIf="formNotification.controls['user_group'].value !== 'field-force'" class="mt-4 ml-20 mb-8"
               (change)="isTargetArea($event)" formControlName="is_target_area">
               {{'iklan_dalam_aplikasi.spanduk_online.target_area' | translate}}</mat-checkbox>
           </div>
@@ -830,7 +830,7 @@
             </ngx-datatable>
           </div>
           <target-area
-            *ngIf="formNotification.controls['user_group'].value === 'customer' && formNotification.get('is_target_area').value"
+            *ngIf="formNotification.controls['user_group'].value !== 'field-force' && formNotification.get('is_target_area').value"
             (selectedArea)="getSelectedArea($event)" (selectedAll)="getSelectedAll($event)"
             (selectedAllId)="getSelectedAllId($event)" [areas]="areasInit" [isNotifValidation]="true"></target-area>
 
