fixing selected all target area - 1

--- a/src/app/shared/target-area/target-area.component.html
+++ b/src/app/shared/target-area/target-area.component.html
@@ -117,6 +117,7 @@
         let-selectFn="selectFn"
       >
         <mat-checkbox
+        [disabled]="rows.length <= 1"
           [checked]="setAllSelected(allRowsSelected)"
           (change)="selectFn(!allRowsSelected)"
         ></mat-checkbox>
