fix disabled on checkbox

--- a/src/app/pages/dte/coin-adjustment-approval/index-tsm/coin-adjustment-approval-tsm.component.html
+++ b/src/app/pages/dte/coin-adjustment-approval/index-tsm/coin-adjustment-approval-tsm.component.html
@@ -95,7 +95,7 @@
     <ng-template ngx-datatable-cell-template let-row="row" let-value="value" let-isSelected="isSelected"
       let-onCheckboxChangeFn="onCheckboxChangeFn">
       <mat-checkbox [checked]="selected.includes(row)" (change)="onCheckboxChangeFn($event)"
-        [disabled]="row.status !== 'pending'">
+        [disabled]="row.status !== 'pending' || row.approver !== owned.name">
       </mat-checkbox>
     </ng-template>
   </ngx-datatable-column>
